correção do webserver.ino e bloqueios dos html

--- a/caixa_terreo/data/index.html
+++ b/caixa_terreo/data/index.html
@@ -409,6 +409,10 @@
 
     <script src="/js/jquery-3.7.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-	<script src="/js/dashboard.js"></script>
-   </body>
+    <script src="/js/auth-guard.js"></script>
+    <script>
+      protegerPagina(['admin','sindico','zelador']);
+    </script>
+    <script src="/js/dashboard.js"></script>
+</body>
 </html>
