--- a/caixa_terreo/data/controle.html
+++ b/caixa_terreo/data/controle.html
@@ -32,7 +32,7 @@
   <!-- BOMBAS -->
   <div class="row mt-3" id="painelBombas"></div>
 
-  <!-- AÇÕES RÁPIDAS -->
+   <!-- AÇÕES RÁPIDAS -->
   <div class="card mt-4">
     <div class="card-header">⚡ Ações rápidas</div>
     <div class="card-body d-grid gap-2 d-md-flex">
@@ -56,7 +56,7 @@
 
 <script src="/js/auth-guard.js"></script>
 <script>
-  protegerPagina(['admin','sindico','operador']);
+  protegerPagina(['admin','sindico','zelador']);
 </script>
 
 <script src="/js/navbar.js"></script>
