correcao dos html

--- a/caixa_terreo/data/pontos.html
+++ b/caixa_terreo/data/pontos.html
@@ -62,7 +62,7 @@
 <!-- Segurança -->
 <script src="/js/auth-guard.js"></script>
 <script>
-  protegerPagina(['admin','sindico','operador']);
+  protegerPagina(['admin','sindico','zelador']);
 </script>
 
 <!-- Navbar -->
