alterado falso aviso de não há fornecimento de agua para se <=50% verificar forbecimento de agua

--- a/caixa_terreo/data/index.html
+++ b/caixa_terreo/data/index.html
@@ -357,8 +357,7 @@
                     ✅ Sistema operando normalmente
                 </div>
 				<div id="alertaVazao" class="alerta-vazao oculto">
-				  🚨 ATENÇÃO: sem fornecimento de água!  
-				  Verifique COPASA ou o registro geral.
+				  Aguardando leitura dos sensores...
 				</div>
 
                 <div class="text-center mt-3">
