--- a/caixa_terreo/data/avisos.html
+++ b/caixa_terreo/data/avisos.html
@@ -30,6 +30,9 @@
   <div id="navbar"></div>
 
   <main class="container mt-4">
+    <div class="alert alert-danger fw-bold text-center" role="alert">
+      Desconsiderar dados dos dias anteriores a 20/02/2026; considerar estatisticas apenas apos 10 de marco de 2026.
+    </div>
 
     <h2 class="mb-4 text-center">
       ⚠️ Avisos e Eventos do Sistema
@@ -85,7 +88,7 @@
   <!-- Segurança -->
   <script src="/js/auth-guard.js"></script>
   <script>
-    protegerPagina(['admin','sindico','zelador']);
+    protegerPagina(['admin','sindico','subsindico','zelador']);
   </script>
 
   <!-- Navbar -->
