--- a/caixa_terreo/data/controle.html
+++ b/caixa_terreo/data/controle.html
@@ -56,7 +56,7 @@
 
 <script src="/js/auth-guard.js"></script>
 <script>
-  protegerPagina(['admin','sindico','zelador']);
+  protegerPagina(['admin','sindico','subsindico','zelador']);
 </script>
 
 <script src="/js/navbar.js"></script>
