--- a/caixa_terreo/data/index.html
+++ b/caixa_terreo/data/index.html
@@ -410,7 +410,7 @@
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/auth-guard.js"></script>
 	<script>
-	  protegerPagina(['admin','sindico','zelador']);
+	  protegerPagina(['admin','sindico','subsindico','zelador']);
 	</script>
 	<script src="/js/dashboard.js"></script>
    </body>
