--- a/caixa_terreo/data/estatisticas.html
+++ b/caixa_terreo/data/estatisticas.html
@@ -101,11 +101,22 @@
 
     </div>
 
+    <div class="card mt-4">
+      <div class="card-header">
+        <i class="bi bi-graph-up-arrow"></i>
+        Evolucao do Nivel (%)
+      </div>
+      <div class="card-body">
+        <canvas id="graficoEstatisticas" height="110"></canvas>
+      </div>
+    </div>
+
   </main>
 
   <!-- JS -->
   <script src="/js/jquery-3.7.1.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/chart.min.js"></script>
 
   <!-- sessão -->
   <script src="/js/auth-guard.js"></script>
