--- a/caixa_terreo/data/historico.html
+++ b/caixa_terreo/data/historico.html
@@ -50,11 +50,19 @@
       </div>
     </div>
 
+    <div class="card mt-4">
+      <div class="card-header">Evolucao do Historico (%)</div>
+      <div class="card-body">
+        <canvas id="graficoHistorico" height="110"></canvas>
+      </div>
+    </div>
+
   </main>
 
   <!-- JS -->
   <script src="/js/jquery-3.7.1.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/chart.min.js"></script>
 
   <!-- Segurança -->
   <script src="/js/auth-guard.js"></script>
